<!--
  ~ Copyright 2016 Square Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<flow.sample.tree.ui.contacts.edit.EditNameView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/edit_name_screen"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <EditText
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</flow.sample.tree.ui.contacts.edit.EditNameView>